<resources>
    <string name="app_name">newsAppForSchool</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="politics">Politics</string>
    <string name="economy">Economy</string>
    <string name="world">World</string>
    <string name="sports">Sports</string>
    <string name="latest">Latest</string>
    <string name="textview">TextView</string>
</resources>